crates/rspyts-macros/tests/ui/serde_skip.stderr
error: unsupported Serde attribute `skip` on this field; rspyts can reflect only `rename`. Use `serde_json::Value` for deliberately schemaless data
 --> tests/ui/serde_skip.rs:7:13
  |
7 |     #[serde(skip)]
  |             ^^^^
